--- a/Змейка/snake.html
+++ b/Змейка/snake.html
@@ -6,7 +6,7 @@
 
 <body>
    <canvas id="canvas" width="400" height="400"></canvas>
-   <script src="snake.js"></script>
+   <script src="snake.js" type="text/javascript"></script>
 </body>
 
 </html>
